--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* General Page Styles */
+/* Styles */
 body {
     margin: 0;
     padding: 0;
@@ -6,7 +6,7 @@ body {
     background-color: #f2f2f2;
 }
 
-/* Main Content */
+/* Main  */
 main {
     max-width: 960px;
     margin: 0 auto;
@@ -20,7 +20,7 @@ section {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Navigation */
+/* Nav */
 nav ul {
     display: flex;
     justify-content: center;
@@ -28,11 +28,11 @@ nav ul {
     margin: 0;
     padding: 0;
 }
-
+/* Nav li */
 nav li {
     margin: 0 15px;
 }
-
+/* nav a */
 nav a {
     color: white;
     background-color: #333;
@@ -42,7 +42,7 @@ nav a {
     border-radius: 4px;
     transition: background-color 0.3s;
 }
-
+/* nav hoover */
 nav a:hover {
     background-color: #555;
 }
@@ -53,23 +53,23 @@ table {
     border-collapse: collapse;
     margin-top: 15px;
 }
-
+/* Caption */
 caption {
     font-weight: bold;
     margin-bottom: 10px;
 }
-
+/* th, td */
 th, td {
     border: 1px solid #ccc;
     padding: 12px;
     text-align: left;
 }
-
+/* thead */
 thead {
     background-color: #444;
     color: white;
 }
-
+/* tfoot */
 tfoot {
     font-style: italic;
     text-align: center;
